# windinet

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: euler_mq_128_only_train.yaml  finetune_vae.yaml  finetune_vae_smoke.yaml  inference.yaml  inverse_opt.yaml  shockwavenet.yaml  windinet.yaml
euler_mq_dataset/: download_from_hf.py
examples/footprints/: city_300m.json  city_400m.json  city_500m.json  city_600m.json  city_700m.json  city_800m.json
examples/inverse_optimization/: example_layout.json
examples/predictions/: city_300m.npz
inverse/: __init__.py  footprint.py  ground_truth.py  logger.py  objective.py  optimize.py  surrogate.py
sandbox/: inspect_h5.py  inspect_ltx_vae.py  test_adapter_vae_forward.py  test_grad_norm_calculation.py  test_gradnorm.py  test_loss_weighting.py  test_losses.py  test_preprocess.py  test_scalar_embedding.py  test_shockwave_dataset.py  test_shockwave_vae.py  test_shockwave_video.py  test_softadapt.py  test_vae_trainer_loss_weighting.py  visualize_h5.py
scripts/: finetune_vae.py  inference.py  inverse_design.py  metrics.py  preprocess_dataset.py  train.py
windinet/: __init__.py  checkpoints.py  config.py  latent_utils.py  ltxv_utils.py  scalar_embeddings.py  utils.py  vae_adapter.py  visualization.py
windinet/inference/: model_loader.py  pipeline.py
windinet/loss_weighting/: __init__.py  base.py  factory.py  fixed.py  gradnorm.py  soft_adapt.py  utils.py
windinet/losses/: __init__.py  h1_semi_norm.py  mlw.py  reconstruction.py  rmse.py  ssim.py
windinet/training/: datasets.py  dit_trainer.py  (+12 more)
