[project]
name = "windinet"
version = "0.1.0"
description = "WinDiNet: Wind field prediction via video diffusion networks."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
dependencies = [
    "accelerate",
    "diffusers>=0.32.1",
    "imageio[ffmpeg]",
    "matplotlib",
    "numpy",
    "peft",
    "pillow",
    "pydantic>=2.10.4",
    "rich",
    "safetensors>=0.5.0",
    "sentencepiece>=0.2.0",
    "torch>=2.6.0",
    "torchvision",
    "transformers",
    "typer",
    "wandb",
    "pyyaml",
]

[project.optional-dependencies]
training = ["scipy"]
inverse = ["scipy"]

[tool.hatch.build.targets.wheel]
packages = ["windinet", "inverse"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
